Dropdown "Opciones" Centrado.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <li class="nav-item dropdown mx-lg-5 d-lg-none d-md-block">
             
             <a class="nav-link" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">Opciones</a>
-            <ul class="dropdown-menu p-0 mt-4 col-9" aria-labelledby="dropdownMenuButton2" style="position:absolute; margin-left: 7em; ">
+            <ul id="opciones" class="dropdown-menu p-0 mt-4 col-9" aria-labelledby="dropdownMenuButton2" style="position:absolute;">
               
               <li class="list-group-item py-3"><u>Opción 1</u></li>
               <li class="list-group-item py-3"><u>Opción 2</u></li>
